--- a/index.html
+++ b/index.html
@@ -31,10 +31,40 @@
         .slider .slide img {
             display: block;
             width: 100%;
-            max-height: 320px;      /* трохи далі – щоб весь компресор був видно */
+            max-height: 320px;
             margin: 0 auto;
-            object-fit: contain !important; /* не обрізає картинку */
+            object-fit: contain !important;
             border-radius: 16px;
+        }
+
+        /* Кнопки-стрілки (на всіх екранах вигляд однаковий) */
+        .slider-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            border: none;
+            border-radius: 999px;
+            padding: 0;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            line-height: 1;
+            background: rgba(15, 23, 42, 0.75);
+            color: #fff;
+            cursor: pointer;
+            backdrop-filter: blur(4px);
+            z-index: 5;
+        }
+
+        .slider-btn-prev {
+            left: 8px;
+        }
+
+        .slider-btn-next {
+            right: 8px;
         }
 
         @media (max-width: 768px) {
@@ -43,7 +73,12 @@
             }
 
             .slider .slide img {
-                max-height: 240px;  /* ще трохи менше на маленьких екранах */
+                max-height: 240px;
+            }
+
+            /* ГОЛОВНЕ: на маленьких екранах стрілки точно видимі */
+            .slider-btn {
+                display: flex !important;
             }
         }
     </style>
@@ -460,7 +495,6 @@
             ticking = true;
         }
     });
-    // Початковий стан
     if (header) header.classList.add('show');
 
     // Плавна поява секцій
@@ -475,10 +509,9 @@
         },
         {threshold: 0.2}
     );
-
     document.querySelectorAll(".fade-in-section").forEach(el => observer.observe(el));
 
-    // ОНОВЛЕНИЙ СЛАЙДЕР ЗІ СВАЙПОМ
+    // Слайдер зі свайпом
     document.querySelectorAll(".slider").forEach(slider => {
         const track = slider.querySelector(".slider-track");
         const slides = slider.querySelectorAll(".slide");
@@ -489,7 +522,7 @@
         let startX = 0;
         let currentX = 0;
         let isDragging = false;
-        const swipeThreshold = 40; // скільки пікселів треба провести, щоб переключити слайд
+        const swipeThreshold = 40;
 
         function updateSlider() {
             const width = slider.clientWidth;
@@ -506,11 +539,9 @@
             updateSlider();
         }
 
-        // Кнопки
         btnNext && btnNext.addEventListener("click", goNext);
         btnPrev && btnPrev.addEventListener("click", goPrev);
 
-        // Touch / свайп
         function onPointerStart(e) {
             isDragging = true;
             startX = e.touches ? e.touches[0].clientX : e.clientX;
@@ -525,26 +556,22 @@
         function onPointerEnd() {
             if (!isDragging) return;
             const diffX = currentX - startX;
-
             if (Math.abs(diffX) > swipeThreshold) {
                 if (diffX < 0) {
-                    goNext(); // свайп вліво
+                    goNext();
                 } else {
-                    goPrev(); // свайп вправо
+                    goPrev();
                 }
             }
-
             isDragging = false;
             startX = 0;
             currentX = 0;
         }
 
-        // Touch події (мобілки)
         track.addEventListener("touchstart", onPointerStart, {passive: true});
         track.addEventListener("touchmove", onPointerMove, {passive: true});
         track.addEventListener("touchend", onPointerEnd);
 
-        // Події мишкою (десктоп)
         track.addEventListener("mousedown", (e) => {
             e.preventDefault();
             onPointerStart(e);
