--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -5,7 +6,7 @@
     <title>КомпресорМайстер — Ремонт компресорів у Києві</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="Ремонт та сервіс поршневих і гвинтових компресорів у Києві. Виїзд майстра, діагностика, капремонт, обслуговування та монтаж пневмосистем.">
+          content="Ремонт, сервіс і продаж поршневих та гвинтових компресорів у Києві. Виїзд майстра, діагностика, капремонт, обслуговування та комплектуючі.">
     <link rel="stylesheet" href="style.css">
 
     <!-- ДОДАНІ СТИЛІ ДЛЯ СЛАЙДЕРА -->
@@ -131,11 +132,11 @@
     <section id="hero" class="hero">
         <div class="container hero-inner fade-in-section">
             <div class="hero-text">
-                <p class="hero-label">Ремонт поршневих та гвинтових компресорів</p>
+                <p class="hero-label">Ремонт та продаж поршневих і гвинтових компресорів</p>
                 <h1>Швидкий сервіс компресорів з виїздом по Києву</h1>
                 <p class="hero-desc">
-                    Діагностика, капітальний ремонт, профілактичне обслуговування та монтаж пневмосистем.
-                    Працюємо обережно, без зайвих простоїв для вашого бізнесу.
+                    Діагностика, капітальний ремонт, профілактичне обслуговування
+                    та продаж компресорів і комплектуючих. Працюємо обережно, без зайвих простоїв для вашого бізнесу.
                 </p>
 
                 <div class="hero-actions">
@@ -162,7 +163,7 @@
     <!-- ===== SERVICES ===== -->
     <section id="services" class="section">
         <div class="container fade-in-section">
-            <h2>Послуги з ремонту компресорів</h2>
+            <h2>Послуги та продаж компресорів</h2>
 
             <div class="grid">
                 <article class="card">
@@ -193,15 +194,6 @@
                 </article>
 
                 <article class="card">
-                    <div class="card-icon">🌀</div>
-                    <h3>Балансування роторів</h3>
-                    <p>
-                        Комп’ютерне динамічне балансування для усунення вібрації
-                        і продовження строку служби роторних вузлів.
-                    </p>
-                </article>
-
-                <article class="card">
                     <div class="card-icon">🧰</div>
                     <h3>Технічне обслуговування</h3>
                     <p>
@@ -211,13 +203,35 @@
                 </article>
 
                 <article class="card">
-                    <div class="card-icon">🧩</div>
-                    <h3>Монтаж пневмосистем</h3>
+                    <div class="card-icon">🛒</div>
+                    <h3>Продаж компресорів</h3>
                     <p>
-                        Проєктування та розведення пневмоліній на вашому підприємстві
-                        з урахуванням навантажень і специфіки виробництва.
+                        Підбір і продаж поршневих та гвинтових компресорів під ваші задачі.
+                        Пояснюємо відмінності моделей, допомагаємо обрати оптимальний варіант
+                        по продуктивності, шуму та реальному бюджету, без нав’язування зайвих опцій.
                     </p>
                 </article>
+
+                <article class="card">
+                    <div class="card-icon">🔩</div>
+                    <h3>Комплектуючі та запчастини</h3>
+                    <p>
+                        Поставляємо фільтри, клапани, ремені, автоматику та інші комплектуючі.
+                        Працюємо тільки з перевіреними постачальниками, підбираємо деталі саме під ваш компресор,
+                        щоб не було зайвих витрат і простоїв.
+                    </p>
+                </article>
+            </div>
+
+            <div class="buy-benefits" style="margin-top: 32px;">
+                <h3>Чому вигідно купувати у нас компресори та запчастини</h3>
+                <ul>
+                    <li>Підбір «під задачу» — враховуємо тиск, витрату повітря, режим роботи та можливі розширення виробництва.</li>
+                    <li>Чесна консультація — відкрито говоримо, де можна заощадити, а де економія призведе до поломок.</li>
+                    <li>Перевірені постачальники — не працюємо з випадковими товарами без історії та сервісу.</li>
+                    <li>Післяпродажний супровід — обслуговуємо та ремонтуємо те, що самі продаємо, не зникаємо після покупки.</li>
+                    <li>Орієнтація на довгострокову співпрацю — важливо, щоб обладнання у вас працювало стабільно, а не лише «до кінця гарантії».</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -586,3 +600,4 @@
 
 </body>
 </html>
+```
