--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h1>Швидкий сервіс компресорів з виїздом по Києву</h1>
                 <p class="hero-desc">
                     Діагностика, капітальний ремонт, профілактичне обслуговування
-                    та продаж компресорів і комплектуючих. Працюємо обережно, без зайвих простоїв для вашого бізнесу.
+                    та продаж компресорів і комплектуючих. 
                 </p>
 
                 <div class="hero-actions">
@@ -293,7 +293,7 @@
                     <div class="process-icon">🔧</div>
                     <div>
                         <h3>3. Виконання ремонту</h3>
-                        <p>Проводимо ремонт, заміну деталей та налаштування обладнання.</p>
+                        <p>Проводимо ремонт, заміну деталей .</p>
                     </div>
                 </li>
                 <li>
