--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>КомпресорМайстер — Ремонт компресорів у Києві</title>
+    <title>Ремонт компресорів у Києві — Поршневі та гвинтові | КомпресорМайстер</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-          content="Ремонт, сервіс і продаж поршневих та гвинтових компресорів у Києві. Виїзд майстра, діагностика, капремонт, обслуговування та комплектуючі.">
+
+    <!-- SEO -->
+    <meta name="description" content="Ремонт поршневих і гвинтових компресорів у Києві. Діагностика, капремонт, заміна підшипників, обслуговування та продаж компресорів. Виїзд майстра за 24 години. Гарантія на роботи.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://kompresormayster.kiev.ua/">
+
+    <!-- Open Graph (для Google/FB/Instagram) -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ремонт компресорів у Києві — КомпресорМайстер">
+    <meta property="og:description" content="Ремонт поршневих і гвинтових компресорів у Києві. Виїзд майстра, діагностика, капремонт, технічне обслуговування та продаж компресорів і комплектуючих.">
+    <meta property="og:url" content="https://kompresormayster.kiev.ua/">
+    <meta property="og:site_name" content="КомпресорМайстер">
+    <meta property="og:locale" content="uk_UA">
+    <meta property="og:image" content="https://kompresormayster.kiev.ua/logo.png">
+
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ремонт компресорів у Києві — КомпресорМайстер">
+    <meta name="twitter:description" content="Ремонт поршневих і гвинтових компресорів у Києві з виїздом майстра. Діагностика, капремонт, обслуговування та продаж компресорів.">
+    <meta name="twitter:image" content="https://kompresormayster.kiev.ua/logo.png">
+
+    <!-- Schema.org LocalBusiness (структуровані дані для Google) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "КомпресорМайстер",
+      "image": "https://kompresormayster.kiev.ua/logo.png",
+      "@id": "https://kompresormayster.kiev.ua/",
+      "url": "https://kompresормayster.kiev.ua/",
+      "telephone": "+380637140388",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Київ",
+        "streetAddress": "вул. Новомостицька, 47",
+        "addressCountry": "UA"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        }
+      ],
+      "priceRange": "₴₴",
+      "description": "Ремонт поршневих і гвинтових компресорів у Києві: діагностика, капітальний ремонт, технічне обслуговування та продаж компресорів і комплектуючих з виїздом майстра."
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
 
     <!-- ДОДАНІ СТИЛІ ДЛЯ СЛАЙДЕРА -->
@@ -101,7 +154,7 @@
 <header class="header">
     <div class="container header-inner">
         <div class="logo">
-            <img src="logo.png" alt="Логотип КомпресорМайстер" class="logo-img">
+            <img src="logo.png" alt="Логотип сервісу ремонту компресорів КомпресорМайстер" class="logo-img">
 
             <div class="logo-text">
                 <span class="logo-main">КомпресорМайстер</span>
@@ -293,7 +346,7 @@
                     <div class="process-icon">🔧</div>
                     <div>
                         <h3>3. Виконання ремонту</h3>
-                        <p>Проводимо ремонт, заміну деталей .</p>
+                        <p>Проводимо ремонт, заміну деталей.</p>
                     </div>
                 </li>
                 <li>
